<resources>
    <string name="app_name">OnlineMovieSearch</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="search_type">movie</string>
    <string name="default_poster">http://www.imdb.com/images/nopicture/medium/film.png</string>
    <string name="snackbar_title_not_found">The movie title you entered was not found</string>
    <string name="snackbar_title_empty">Please enter a movie title</string>
    <string name="network_not_available">Network not available! Please connect to the Internet.</string>
    <string name="title">Title</string>
    <string name="example_title">Pursuit of Happiness</string>
    <string name="released">Released</string>
    <string name="example_release">01 Nov 2006</string>
    <string name="runtime">Runtime</string>
    <string name="example_runtime">137 min</string>
    <string name="director">Director</string>
    <string name="example_director">Gabriele Muccino</string>
    <string name="Genre">Genre</string>
    <string name="example_genre">Drama</string>
    <string name="Writer">Writer(s)</string>
    <string name="example_writer">Steven Conrad</string>
    <string name="actors">Actors</string>
    <string name="example_actors">Will Smith, Jaden Smith, Thandie Newton</string>
    <string name="plot">Plot</string>
    <string name="example_full_plot">"Life is a struggle for single father Chris Gardner (Will Smith). Evicted from their apartment, he and his young son (Jaden Christopher Syre Smith) find themselves alone with no place to go. Even though Chris eventually lands a job as an intern at a prestigious brokerage firm, the position pays no money. The pair must live in shelters and endure many hardships, but Chris refuses to give in to despair as he struggles to create a better life for himself and his son."</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>