<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_left"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2"
            app:useDefaultMargins="true">

            <TextView
                style="@style/left_column_bold"
                android:text="@string/title"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/grid_title"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="0"
                tools:text="@string/example_title" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/released"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/grid_released"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="1"
                tools:text="@string/example_release" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/runtime"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/grid_runtime"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="2"
                tools:text="@string/example_runtime" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/director"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/grid_director"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="3"
                tools:text="@string/example_director" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/Genre"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/grid_genre"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="4"
                tools:text="@string/example_genre" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/Writer"
                app:layout_column="0"
                app:layout_row="5" />

            <TextView
                android:id="@+id/grid_writers"
                style="@style/right_column_normal"
                android:layout_width="0dp"
                app:layout_column="1"
                app:layout_row="5"
                tools:text="@string/example_writer" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/actors"
                app:layout_column="0"
                app:layout_row="6" />

            <TextView
                android:id="@+id/grid_actors"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="6"
                tools:text="@string/example_actors" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/plot"
                app:layout_column="0"
                app:layout_row="7" />

            <TextView
                android:id="@+id/grid_plot"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="7"
                tools:text="@string/example_full_plot" />
        </android.support.v7.widget.GridLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>